--- a/app/src/main/res/layout/fragment_detalle_herramienta.xml
+++ b/app/src/main/res/layout/fragment_detalle_herramienta.xml
@@ -7,6 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/linearLayoutContainer"
         android:orientation="vertical"
         android:layout_height="match_parent">
 
@@ -14,7 +15,7 @@
             android:id="@+id/imageViewHerramienta"
             android:layout_width="match_parent"
             android:src="@drawable/ic_menu_camera"
-            android:layout_height="144dp" />
+            android:layout_height="@dimen/heigt_ppal_image" />
 
         <TextView
             android:id="@+id/textViewPrecio"
@@ -23,18 +24,16 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textDescripcion"
+            android:id="@+id/textViewDescripcion"
             tools:text="Destornillador eléctrico muy bonito"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textResumen"
+            android:id="@+id/textViewResumen"
             tools:text="Se ofrece el uso de este destornillador por horas para e"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-
 
 
     </LinearLayout>
