--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="nav_header_height">120dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dimen_image_herramienta">96dp</dimen>
     <dimen name="dimen_margin_fragment">5dp</dimen>
     <dimen name="heigt_ppal_image">144dp</dimen>
+    <dimen name="half_statusbar_height">15dp</dimen>
+    <dimen name="dim_drawer_header_height">160dp</dimen>
 </resources>
