--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,15 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayoutUsuario"
-        android:visibility="gone"
-        app:passwordToggleEnabled="true">
+        android:visibility="gone">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/prompt_nombre"
             android:imeOptions="actionNext"
-            android:inputType="textPassword"
             android:maxLines="1" />
 
     </android.support.design.widget.TextInputLayout>
@@ -29,15 +27,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayoutUsuario"
-        android:visibility="gone"
-        app:passwordToggleEnabled="true">
+        android:visibility="gone">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/prompt_apellidos"
             android:imeOptions="actionNext"
-            android:inputType="textPassword"
             android:maxLines="1" />
 
     </android.support.design.widget.TextInputLayout>
