--- a/app/src/main/res/layout/viewholder_herramienta.xml
+++ b/app/src/main/res/layout/viewholder_herramienta.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_margin="5dp"
-            android:src="@drawable/ic_not_interested_black_24dp" />
+            android:layout_margin="5dp" />
 
         <TextView
             android:id="@+id/textViewNombreHerramienta"
