--- a/app/src/main/res/layout/viewholder_herramienta.xml
+++ b/app/src/main/res/layout/viewholder_herramienta.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:src="@drawable/ic_warning_black_24dp"
             android:layout_margin="5dp" />
 
         <TextView
@@ -33,7 +34,7 @@
             android:layout_height="@dimen/dimen_image_herramienta"
             android:layout_below="@+id/textViewNombreHerramienta"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_menu_camera" />
+            android:src="@drawable/ic_photo_black_24dp" />
 
         <TextView
             android:id="@+id/textViewPrecioExperiencia"
