--- a/app/src/main/res/layout/fragment_experiencias.xml
+++ b/app/src/main/res/layout/fragment_experiencias.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="@dimen/dimen_margin_fragment"
-    android:layout_height="match_parent">
+    android:layout_gravity="end">
 
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -16,4 +17,9 @@
             android:layout_height="wrap_content" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    <include
+        layout="@layout/fragment_experiencias_filter"
+        android:layout_width="@dimen/filter_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="end" />
+</android.support.v4.widget.DrawerLayout>
