--- a/app/src/main/res/menu/menu_experiencias.xml
+++ b/app/src/main/res/menu/menu_experiencias.xml
@@ -3,15 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_map"
+        android:icon="@drawable/ic_map_white_24dp"
         android:orderInCategory="1"
         android:title="@string/action_map"
-        android:icon="@drawable/ic_map_white_24dp"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_subir_experiencia"
+        android:icon="@drawable/ic_file_upload_white_24dp"
         android:orderInCategory="2"
         android:title="@string/action_subir_experiencia"
-        android:icon="@drawable/ic_file_upload_white_24dp"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        android:orderInCategory="3"
+        android:title="@string/action_filter"
         app:showAsAction="always" />
 </menu>
