--- a/app/src/main/res/menu/menu_herramientas.xml
+++ b/app/src/main/res/menu/menu_herramientas.xml
@@ -14,4 +14,11 @@
         android:title="@string/action_subir_herramienta"
         android:icon="@drawable/ic_file_upload_white_24dp"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        android:orderInCategory="3"
+        android:title="@string/action_filter"
+        app:showAsAction="always" />
 </menu>
