--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="half_statusbar_height">15dp</dimen>
     <dimen name="dim_drawer_header_height">160dp</dimen>
     <dimen name="dimen_width_precio">80dp</dimen>
+    <dimen name="filter_width">200dp</dimen>
 </resources>
