--- a/app/src/main/res/layout/fragment_experiencias_filter.xml
+++ b/app/src/main/res/layout/fragment_experiencias_filter.xml
@@ -20,20 +20,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:maxLines="1"
-                android:hint="Descripcion" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutNombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:imeOptions="actionDone"
-                android:maxLines="1"
-                android:hint="Nombre" />
+                android:hint="@string/filter_description" />
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
@@ -42,19 +29,17 @@
             android:orientation="horizontal">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/textInputLayoutFechaSolicitudInicial"
+                android:id="@+id/textInputLayoutPrecioInicial"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTextFechaSolicitudInicial"
+                    android:id="@+id/editTextPrecioInicial"
                     android:layout_width="match_parent"
+                    android:inputType="numberDecimal"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:hint="Precio inicial"
+                    android:hint="@string/filter_precio_inicial"
                     android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
@@ -67,39 +52,28 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextFechaPrecioFinal"
                     android:layout_width="match_parent"
+                    android:inputType="numberDecimal"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:hint="Precio final"
+                    android:hint="@string/filter_precio_final"
                     android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="16dp" />
-
-
         <Button
             android:id="@+id/buttonAplicar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Aplicar" />
+            android:text="@string/filter_button_aplicar" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="8dp" />
 
         <Button
-            android:id="@+id/buttonReste"
+            android:id="@+id/buttonRestaurar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reset" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="32dp" />
+            android:text="@string/filter_button_reiniciar" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
