--- a/app/src/main/res/layout/fragment_usuario_detalle.xml
+++ b/app/src/main/res/layout/fragment_usuario_detalle.xml
@@ -14,10 +14,23 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Nombre y apellidos"
-            android:focusableInTouchMode="false"
-            android:focusable="false"
-            android:clickable="false"
+            android:hint="@string/prompt_nombre_apellidos"
+            android:enabled="false"
+            android:maxLines="1" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutUsuario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/prompt_usuario"
+            android:enabled="false"
             android:maxLines="1" />
 
     </android.support.design.widget.TextInputLayout>
@@ -30,7 +43,8 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Acerca de ti"
+            android:gravity="bottom"
+            android:hint="@string/prompt_acerca_de_ti"
             android:lines="3" />
 
     </android.support.design.widget.TextInputLayout>
