--- a/app/src/main/res/layout/fragment_detalle_experiencia.xml
+++ b/app/src/main/res/layout/fragment_detalle_experiencia.xml
@@ -5,37 +5,123 @@
     android:layout_margin="@dimen/dimen_margin_fragment"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:id="@+id/linearLayoutContainer"
+        android:id="@+id/relativeLayoutContainer"
         android:orientation="vertical"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imageViewExperiencia"
             android:layout_width="match_parent"
+            android:layout_alignParentTop="true"
             android:src="@drawable/ic_menu_camera"
             android:layout_height="@dimen/heigt_ppal_image" />
 
         <TextView
             android:id="@+id/textViewPrecio"
+            android:layout_below="@+id/imageViewExperiencia"
+            android:layout_margin="5dp"
+            android:textSize="@dimen/dimen_subtitle_image"
+            android:textStyle="bold"
             tools:text="20€"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewDescripcion"
-            tools:text="Destornillador eléctrico muy bonito"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/dimen_subtitle_image"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/imageViewExperiencia"
+            android:layout_toRightOf="@+id/textViewPrecio"
+            tools:text="Aprende a atornillar como un profesional."
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewResumen"
-            tools:text="Se ofrece el uso de este destornillador por horas para e"
+            android:layout_below="@+id/textViewDescripcion"
+            tools:text="Se ofrece el uso de este destornillador por horas para easdasdasdasd"
+            android:maxLines="3"
+            android:layout_margin="5dp"
+            android:textSize="@dimen/dimen_description_catagoria"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:text="Categoria: "
+            android:id="@+id/textViewCat"
+            android:layout_width="wrap_content"
+            android:textSize="@dimen/dimen_description_catagoria"
+            android:layout_below="@+id/textViewResumen"
+            android:layout_marginLeft="5dp"
+            android:layout_height="wrap_content" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textViewCategoria"
+            tools:text="Electico"
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/textViewResumen"
+            android:textSize="@dimen/dimen_description_catagoria"
+            android:layout_toRightOf="@+id/textViewCat"
+            android:layout_marginRight="5dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textViewTitleUsuario"
+            android:layout_width="match_parent"
+            android:textStyle="italic"
+            android:layout_below="@+id/textViewCategoria"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dimen_subtitle_image"
+            android:layout_margin="5dp"
+            android:text="@string/prompt_title_user"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="@dimen/dimen_image_ppal"
+            android:layout_height="@dimen/dimen_image_ppal"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_person_white_24dp"
+            android:layout_marginLeft="5dp"
+            android:layout_below="@+id/textViewTitleUsuario"
+            android:tint="@android:color/black" />
+
+        <RatingBar
+            android:id="@+id/ratingBarCalificacion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:isIndicator="true"
+            android:layout_below="@+id/textViewTitleUsuario"
+            android:layout_toRightOf="@id/imageView"
+            android:theme="@style/RatingBar"
+            android:layout_gravity="center"
+            android:numStars="5"
+            tools:rating="3" />
+
+        <TextView
+            android:layout_width="@dimen/dimen_image_ppal"
+            android:layout_marginLeft="5dp"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            tools:text="cvegaf"
+            android:id="@+id/textViewIdUsuario"/>
+
+        <TextView
+            android:id="@+id/textViewAcerca"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ratingBarCalificacion"
+            android:layout_toRightOf="@+id/textViewIdUsuario"
+            android:textSize="@dimen/dimen_description_catagoria"
+            tools:text="Este es el texto que se va a ver como descripción del usuario"/>
+    </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
