--- a/app/src/main/res/layout/viewholder_experiencia.xml
+++ b/app/src/main/res/layout/viewholder_experiencia.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/carViewContainer"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="5dp"
+            android:layout_margin="5dp"
+            android:textSize="@dimen/dimen_subtitle_image"
             tools:text="Martillo" />
 
         <ImageView
@@ -30,9 +31,11 @@
             android:id="@+id/textViewPrecioExperiencia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_below="@+id/imageViewExperiencia"
-            android:layout_marginTop="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="5dp"
+            android:textStyle="bold"
+            android:textSize="@dimen/dimen_subtitle_image"
             tools:text="20€" />
 
 
